--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@ src/__pycache__/
 models/__pycache__/
 src/multi_gpu/__pycache__/
 checkpoints/
-log/
 .idea/
 preprocessed_data/
 inputs/
@@ -21,3 +20,4 @@ data/
 *.pdf
 *.docx
 *.doc
+*.zip
