--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,16 @@
 .DS_Store
+.idea/
 .ropeproject/
 .ipynb_checkpoints/
 __pycache__/
-paper/
 src/__pycache__/
-models/__pycache__/
-src/multi_gpu/__pycache__/
-checkpoints/
-.idea/
-preprocessed_data/
-inputs/
+src/models/__pycache__/
+src/data_gen/__pycache__/
+data/
+logs/
 tf_logs/
 test_logs/
 train_logs/
-logs/
-data/
-*.html
-*.pyc
-*.pdf
-*.docx
-*.doc
+checkpoints/
+papers/
 *.zip
